# EmailAll

./: .gitignore  README.md  __init__.py  emailall.py  main.py  pyproject.toml  requirements.txt
common/: output.py  search.py  utils.py
config/: __init__.py  api.py  setting.py
docs/: changes.md
emailall/: __init__.py  lib.py
emailall/common/: output.py  search.py  utils.py
emailall/config/: __init__.py  log.py  setting.py
emailall/modules/: collect.py  module.py
emailall/modules/datasets/: Emailf.py  phonebook.py  skymem.py  snov.py  veryvp.py
emailall/modules/search/: ask.py  baidu.py  bingcn.py  githubapi.py  google.py  qwant.py  so.py  sogou.py
modules/: collect.py  module.py
modules/datasets/: Emailf.py  phonebook.py  skymem.py  snov.py  veryvp.py
modules/search/: ask.py  baidu.py  bingcn.py  githubapi.py  google.py  qwant.py  so.py  sogou.py
result/: READEME.MD
